fixing the bug with a pawn being able to jump over a piece on a first move

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@
     width: 48px;
     height: 48px;
     position: relative;
+    pointer-events: none;
+    user-select: none;
 }
 
 .black {
